--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,22 @@ services:
   - type: web
     name: grabnconvert
     runtime: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      apt-get update && apt-get install -y ffmpeg
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
+    plan: free
+    autoDeploy: true
     envVars:
+      - key: FLASK_SECRET_KEY
+        generateValue: true
       - key: FLASK_ENV
         value: production
+      - key: FLASK_DEBUG
+        value: "0"
+      - key: BASE_OUTPUT_DIR
+        value: output
+      - key: UPLOAD_FOLDER
+        value: uploads
+      - key: PYTHON_VERSION
+        value: 3.9.0
